# elden-ring-transmog

./: .clang-format  .gitignore  CMakeLists.txt  EldenRingLoadoutMod.cpp  EldenRingLoadoutMod.h  EldenRingLoadoutMod.vcxproj  EldenRingTransmog.sln  GameHook.cpp  GameHook.h  LICENSE  LICENSE.txt  README.md  dllmain.cpp  ertransmogrify.ini  params.h
EldenRingTransmogrify/: EldenRingTransmogrify.cs  EldenRingTransmogrify.csproj  TransmogCommandLineOptions.cs  TransmogEMEVDUtils.cs  TransmogEventUtils.cs  TransmogMessageUtils.cs  TransmogTalkUtils.cs
SoulsFormats/: README.md  SoulsFormats.csproj
SoulsFormats/Binder/: Binder.cs  BinderFile.cs  BinderFileHeader.cs  BinderHashTable.cs  BinderReader.cs  IBinder.cs
SoulsFormats/Binder/BND3/: BND3.cs  BND3Reader.cs  IBND3.cs
SoulsFormats/Binder/BND4/: BND4.cs  BND4Reader.cs  IBND4.cs
SoulsFormats/Binder/BXF3/: BXF3.cs  BXF3Reader.cs  IBXF3.cs
SoulsFormats/Binder/BXF4/: BXF4.cs  BXF4Reader.cs  IBXF4.cs
SoulsFormats/Formats/: ACB.cs  BHD5.cs  BTAB.cs  BTL.cs  BTPB.cs  CCM.cs  CLM2.cs  DCX.cs  EDD.cs  EDGE.cs  EMELD.cs  ENFL.cs  ESD.cs  F2TR.cs  FMG.cs  FXR3.cs  GPARAM.cs  GRASS.cs  HKXPWV.cs  LUAGNL.cs  LUAINFO.cs  MATBIN.cs  MCG.cs  MCP.cs  MTD.cs  NGP.cs  NVA.cs  NVM.cs  PMDCL.cs  RMB.cs
SoulsFormats/Formats/DRB/: Anik.cs  Anim.cs  Anio.cs  Control.cs  DRB.cs  Dlg.cs  Dlgo.cs  Scdk.cs  Scdl.cs  Scdo.cs  Shape.cs  Texture.cs
SoulsFormats/Formats/EMEVD/: EMEVD.cs  Event.cs  Instruction.cs  Layer.cs  Parameter.cs
SoulsFormats/Formats/FFXDLSE/: Action.cs  Evaluatable.cs  FFXDLSE.cs  FXEffect.cs  Param.cs  ParamList.cs  Primitive.cs  ResourceSet.cs  State.cs  StateMap.cs  Trigger.cs
SoulsFormats/Formats/FLVER/: Bone.cs  Dummy.cs  FlverCache.cs  IFlver.cs  LayoutMember.cs  Vertex.cs  VertexBoneIndices.cs  VertexBoneWeights.cs  VertexColor.cs
SoulsFormats/Formats/FLVER/FLVER0/: Bone.cs  BufferLayout.cs  Dummy.cs  FLVER0.cs  FLVER0Header.cs  Material.cs  Mesh.cs  Texture.cs  VertexBuffer.cs
SoulsFormats/Formats/FLVER/FLVER2/: Bone.cs  BufferLayout.cs  Dummy.cs  EdgeIndexCompression.cs  FLVER2.cs  FLVER2Header.cs  FaceSet.cs  GXList.cs  Material.cs  Mesh.cs  SekiroUnkStruct.cs  Texture.cs  VertexBuffer.cs
SoulsFormats/Formats/HKX/: Animation.cs  Collision.cs  HKX.cs  NavMesh.cs
SoulsFormats/Formats/HKX2/: HKX2.cs  PackFileDeserializer.cs
SoulsFormats/Formats/MQB/: CustomData.cs  Cut.cs  Disposition.cs  MQB.cs  Resource.cs  Timeline.cs  Transform.cs
SoulsFormats/Formats/MSB/: IMsb.cs  MSB.cs  MSBReference.cs  Shape.cs
SoulsFormats/Formats/MSB/MSB1/: EventParam.cs  MSB1.cs  ModelParam.cs  PartsParam.cs  PointParam.cs
SoulsFormats/Formats/MSB/MSB2/: EventParam.cs  LayerParam.cs  MSB2.cs  MapstudioBoneName.cs  MapstudioPartsPose.cs  ModelParam.cs  PartsParam.cs  PointParam.cs  RouteParam.cs
SoulsFormats/Formats/MSB/MSB3/: EventParam.cs  LayerParam.cs  MSB3.cs  MapstudioBoneName.cs  MapstudioPartsPose.cs  ModelParam.cs  PartsParam.cs  PointParam.cs  RouteParam.cs
SoulsFormats/Formats/MSB/MSBB/: EventParam.cs  MSBB.cs  ModelParam.cs  PartsParam.cs  PointParam.cs
SoulsFormats/Formats/MSB/MSBD/: EventParam.cs  MSBD.cs  MapstudioTree.cs  ModelParam.cs  PartsParam.cs  PointParam.cs
SoulsFormats/Formats/MSB/MSBE/: EventParam.cs  MSBE.cs  ModelParam.cs  PartsParam.cs  PointParam.cs  RouteParam.cs
SoulsFormats/Formats/MSB/MSBN/: MSBN.ModelSection.cs  MSBN.PartsSection.cs  MSBN.cs
SoulsFormats/Formats/MSB/MSBS/: EventParam.cs  MSBS.cs  ModelParam.cs  PartsParam.cs  PointParam.cs  RouteParam.cs
SoulsFormats/Formats/Other/: MDL.cs  MDL0.cs  MDL4.cs
SoulsFormats/Formats/Other/AC4/: Zero3.cs
SoulsFormats/Formats/Other/ACE3/: BND0.cs
SoulsFormats/Formats/Other/KF1/: MDO.cs
SoulsFormats/Formats/Other/KF4/: CHR.cs  DAT.cs  MAP.cs  OM2.cs
SoulsFormats/Formats/Other/Kuon/: BND0.cs  DVDBND0.cs
SoulsFormats/Formats/Other/MWC/: MDAT.cs  TDAT.cs
SoulsFormats/Formats/Other/Otogi2/: DAT.cs
SoulsFormats/Formats/Other/SOM/: MDO.cs
SoulsFormats/Formats/PARAM/: PARAMTDF.cs  ParamUtil.cs
SoulsFormats/Formats/PARAM/Deprecated/: Enum.cs  Layout.cs
SoulsFormats/Formats/PARAM/PARAM/: Cell.cs  PARAM.cs  Row.cs
SoulsFormats/Formats/PARAM/PARAMDEF/: Field.cs  PARAMDEF.cs  (+1 more)
SoulsFormats/Formats/TAE/: TAE.Template.cs  TAE.cs
SoulsFormats/Formats/TAE3/: TAE3.Event.cs  TAE3.cs
SoulsFormats/Formats/TPF/: DDS.cs  Headerizer.cs  TPF.cs
SoulsFormats/Util/: Attributes.cs  BinaryReaderEx.cs  BinaryWriterEx.cs  CryptographyUtility.cs  ISoulsFile.cs  ListExtensions.cs  Oodle26.cs  Order.cs  SFEncoding.cs  SFUtil.cs  SoulsFile.cs  SupportsAlphaAttribute.cs  XmlNodeExtensions.cs  XmlWriterExtensions.cs
event/: transmog_func.emevd.dcx  transmog_func.emevd.dcx.bak  transmog_func.emevd.dcx.js
include/tga/: mem_region.h
mods/common/event/: transmog_func.emevd.dcx  transmog_func.emevd.dcx.bak  transmog_func.emevd.dcx.js
mods/common/msg/: deude.json  engus.json  frafr.json  itait.json  polpl.json  porbr.json  spaar.json  zhocn.json  zhotw.json
mods/ertransmog/: regulation.bin.prev
mods/ertransmog/event/: common.emevd.dcx  common.emevd.dcx.bak
src/: AOBs.hpp  BaseMod.cpp  BaseMod.hpp  ConvergenceSpellScalingMod.cpp  DefaultParams.hpp  EldenRingLoadoutMod.cpp  EldenRingLoadoutMod.hpp  EldenRingTransmogMod.cpp  ExportMod.hpp  GameDataMan.hpp  GameHook.cpp  GameHook.hpp  GameMemory.hpp  ItemGib.hpp  ModUtils.cpp  ModUtils.hpp  MsgRepository.hpp  ParamDefs.h  ParamUtils.cpp  ParamUtils.hpp  Params.hpp  PlayerUtils.cpp  PlayerUtils.hpp  Scan.hpp  Transmog.cpp  Transmog.hpp  TransmogConfig.cpp  TransmogConfig.hpp  TransmogEvents.cpp  TransmogEvents.hpp  TransmogI18n.hpp  TransmogMessages.cpp  TransmogMessages.hpp  TransmogParams.cpp  TransmogParams.hpp  TransmogPlayerState.cpp  TransmogPlayerState.hpp  TransmogShop.cpp  TransmogShop.hpp  TransmogTalkScript.cpp  (+26 more)
src/ezstate/: CustomStates.hpp  EzState.hpp
src/internal/: EzState.hpp  GameDataMan.hpp  GameMan.hpp  List.hpp  Params.hpp  WorldChrMan.hpp
src/params/: Params.hpp
src/utils/: modutils.cpp  params.cpp  params.hpp  players.cpp  players.hpp  talkscript_utils.hpp
(+17 files in other folders)
